crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_merge_tree_conflicts_all_types.snap
---
source: crates/gitr/src/parse/mod.rs
expression: m
---
GitMergeResult {
    has_conflicts: true,
    conflict_files: [
        "del.txt",
        "dir.txt",
        "file.txt",
        "mod.txt",
        "old.txt",
        "ren.txt",
        "src/main.rs",
    ],
    tree_oid: None,
}
