crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_remotes_normal.snap
---
source: crates/gitr/src/parse/mod.rs
assertion_line: 1661
expression: r
---
[
    GitRemote {
        name: "origin",
        url: "https://github.com/foo/bar.git",
    },
]
