crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_status_copy.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
GitStatus {
    staged: [
        "new.txt",
    ],
    unstaged: [],
    untracked: [],
}
