crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_status_empty.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
GitStatus {
    staged: [],
    unstaged: [],
    untracked: [],
}
