crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_status_mixed.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
GitStatus {
    staged: [
        "src/lib.rs",
    ],
    unstaged: [
        "src/main.rs",
        "old.rs",
    ],
    untracked: [
        "new.txt",
    ],
}
