crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_status_unmerged.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
GitStatus {
    staged: [
        "conflict.rs",
    ],
    unstaged: [
        "conflict.rs",
    ],
    untracked: [],
}
