crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_submodules_dirty.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
[
    GitSubmodule {
        sha: "4a20283f8c33c1e9f12ab234a1e5b1e1e8e3e1e1",
        path: "submodules/bar",
        describe: Some(
            "heads/main",
        ),
        dirty: true,
        uninitialized: false,
    },
]
